Fix avatar and group alignment when screen size turned less.

--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -74,6 +74,9 @@ body {
 
   width: 32px;
   height: 32px;
+
+  min-width: 32px;
+  min-height: 32px;
  /* line-height: 32px; */
 
  /*
